# cadis-runtime

./: .gitignore  LICENSE  README.md  pyproject.toml
cadis_runtime/: __init__.py  app.py  bootstrap.py  core_adapter.py  errors.py  runtime.py  runtime_startup.py  types.py  version.py
cadis_runtime/dataset/: __init__.py  ffsf_runtime.py  loader.py
cadis_runtime/execution/: __init__.py  pipeline.py
cadis_runtime_app/: __init__.py  app.py  app_startup.py  bootstrap_adapter.py  runtime_bootstrap.py  runtime_startup.py
docker/: Dockerfile  docker-entrypoint.sh
