[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cadis-runtime"
dynamic = ["version"]
description = "Deterministic dataset-driven runtime for ISO 3166-1 admin hierarchy lookup."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["cadis-core>=0.1.0"]
keywords = ["cadis", "geospatial", "administrative-boundaries", "runtime"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
bootstrap = ["cadis-cdn>=0.1.0"]
api = ["Flask==3.1.0", "gunicorn==23.0.0"]

[tool.setuptools.dynamic]
version = { attr = "cadis_runtime.version.__version__" }

[tool.setuptools.packages.find]
include = ["cadis_runtime*"]
exclude = ["cadis_runtime_app*"]
